--- a/web-server/public/about.html
+++ b/web-server/public/about.html
@@ -1,7 +1,9 @@
 <html>
     <head>
+        <link rel="stylesheet" href="/css/style.css" />
     </head>
     <body>
         <h1>About Page</h1>
+        <img src="img/img.jpg"/>
     </body>
 </html>
