--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
         <h1>From a static File</h1>
